Fix modal validation on mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -223,10 +223,7 @@ main {
   top: 48px;
   width: 100%;
   max-width: 500px;
-  /* height: fit-content; */
-  max-height: calc(100vh - 40px);
   display: flex;
-  overflow: hidden;
   border-radius: 10px 10px 0 0;
   padding-top: 20px;
   animation-name: modalopen;
